--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             <div class="container h-100">  
                 <div class="row align-items-center">
                     <div class="col-lg-6 no-mobile">
-                        <div id="anim-61c47741e8a05" class="wpbdmv-animation renderer-svg" style="max-width: 100%; width: 100%;">
+                      <div id="anim-61c47741e8a05" class="wpbdmv-animation renderer-svg" style="max-width: 100%; width: 100%;">
                             </div>
                         </div>
                         <div class="col-lg-6">
                           <span class="welcome welcome--dot">Welcome to NewBalance Energy</span>
                             <h1 class="text-white font-weight-bold">A platform for unlocking production and commercialization of green hydrogen at scale</h1>
-                            <hr class="divider my-4" />
+                            <hr class="divider my-4"/>
                             <p class="text-white-75 font-weight-regular mb-5">NewBalance Energy sources and supports competitive and reliable green hydrogen production <i>today</i> to supply its network of international off-takers <i>tomorrow</i>.</p>
                             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#platform">Learn More</a>
                         </div>
@@ -98,7 +98,7 @@
                 </div>
             </div>
         </section>
-        <!-- South America-->
+        <!-- Approach-->
         <section class="page-section">
             <div class="container">
               <span class=" welcome-dark welcome--dot text-center mt-0" id="approach">Our Approach</span>
@@ -111,7 +111,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Proprietary Due Diligence</h5>
                             <p class="card-text">NewBalance and its partners develop a set of region-specific due diligence and production protocols defined as Hydrogen Production Qualification Standards (“HPQS”) to measure the competitiveness and reliability of production projects.</p>
-                            <a href="#" class="btn btn-primary">Learn More</a>
+                            <a href="hpqs.html" class="btn btn-primary">Learn More</a>
                           </div>
                         </div>
                     </div>
