--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Capital Investment</h5>
                             <p class="card-text">We invest capital into our portfolio projects in support of its development through feasibility and Front End Engineering Design phases to ultimately achieve a successful and accelerated Financial Investment Decision.</p>
-                            <a href="#" class="btn btn-primary">Learn More</a>
+                            <a href="invest.html" class="btn btn-primary">Learn More</a>
                           </div>
                         </div>
                     </div>
@@ -131,7 +131,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Offtake Agreements</h5>
                             <p class="card-text">NewBalance works with each project to develop an offtake proposal early in the project life cycle. NewBalance's HPQS governs the offtake proposal and works as a roadmap for automatically converting it into a purchase agreement.</p>
-                            <a href="#" class="btn btn-primary">Learn More</a>
+                            <a href="offtake.html" class="btn btn-primary">Learn More</a>
                           </div>
                         </div>
                     </div>
