--- a/offtake.html
+++ b/offtake.html
@@ -45,10 +45,10 @@
             </button>
               <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="/#platform">Platform</a></li>
-                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="/#approach">Our Approach</a></li>
-                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="/#location">South America</a></li>
-                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="/#contact">Contact</a></li>
+                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html/#platform">Platform</a></li>
+                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html/#approach">Our Approach</a></li>
+                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html/#location">South America</a></li>
+                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html/#contact">Contact</a></li>
                   <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger nav-blog" target="_blank" href="https://balanced-holdings.medium.com">Blog</a></li>
                 </ul>
               </div>
@@ -87,7 +87,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Proprietary Due Diligence</h5>
                             <p class="card-text">NewBalance and its partners develop a set of region-specific due diligence and production protocols defined as Hydrogen Production Qualification Standards (“HPQS”) to measure the competitiveness and reliability of production projects.</p>
-                            <a href="#" class="btn btn-primary">Learn More</a>
+                            <a href="hpqs.html" class="btn btn-primary">Learn More</a>
                           </div>
                         </div>
                     </div>
@@ -97,7 +97,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Capital Investment</h5>
                             <p class="card-text">We invest capital into our portfolio projects in support of its development through feasibility and Front End Engineering Design phases to ultimately achieve a successful and accelerated Financial Investment Decision.</p>
-                            <a href="#" class="btn btn-primary">Learn More</a>
+                            <a href="invest.html" class="btn btn-primary">Learn More</a>
                           </div>
                         </div>
                     </div>
