backlinks for the navbar

--- a/hpqs.html
+++ b/hpqs.html
@@ -45,10 +45,10 @@
             </button>
               <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html/#platform">Platform</a></li>
-                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html/#approach">Our Approach</a></li>
-                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html/#location">South America</a></li>
-                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html/#contact">Contact</a></li>
+                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html#platform">Platform</a></li>
+                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html#approach">Our Approach</a></li>
+                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html#location">South America</a></li>
+                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html#contact">Contact</a></li>
                   <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger nav-blog" target="_blank" href="https://balanced-holdings.medium.com">Blog</a></li>
                 </ul>
               </div>
