--- a/offtake.html
+++ b/offtake.html
@@ -45,10 +45,10 @@
             </button>
               <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html/#platform">Platform</a></li>
-                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html/#approach">Our Approach</a></li>
-                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html/#location">South America</a></li>
-                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html/#contact">Contact</a></li>
+                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html#platform">Platform</a></li>
+                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html#approach">Our Approach</a></li>
+                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html#location">South America</a></li>
+                  <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger" href="index.html#contact">Contact</a></li>
                   <li class="nav-item"><a class="nav-link nav-item-article js-scroll-trigger nav-blog" target="_blank" href="https://balanced-holdings.medium.com">Blog</a></li>
                 </ul>
               </div>
@@ -64,7 +64,7 @@
                 <div class="row row-article row-article-purple">
                     <div class="col-lg-6 col-md-6">
                         <p>Our work is to identify and partner with world-class production projects and bring them future commercial certainties today. Once they qualify for our project portfolio through our HPQS, we work with them on building an initial offtake proposal. This process begins as early as possible in the project's lifecycle.</p>
-                        <p>Our proposal, tied to our HPQS, contains the elements and specifications that constitute our demand profile, including the product's green certification process, and automatically turns itself into a purchase agreement as the projects evolve.</p>
+                        <p>Our proposal, tied to our <a href="hpqs.html">HPQS</a>, contains the elements and specifications that constitute our demand profile, including the product's green certification process, and automatically turns itself into a purchase agreement as the projects evolve.</p>
                         <p>Counting with an offtake path early in its lifecycle gives the project a critical advantage to escape the bottlenecks caused by the slow development of plant component manufacturing and supply chain capacity.</p>
                         <p>At the same time, building a competitive and reliable supply of green hydrogen today allows our offtake partners to escape future supply constraints caused by the point above and transition their operations as planned.</p>
                     </div>
