sitemap y google validator

--- a/offtake.html
+++ b/offtake.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Unlocking the global export of South American renewables via green hydrogen" />
-        <meta name="NewBalance Energy" content="" />
+        <meta name="author" content="NewBalance Energy" />
         <title>NBE - Offtake Agreements</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -34,6 +34,7 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
+        <meta name="google-site-verification" content="WfeWhA16ovyM__qq9SpH1N5ezhJa4Mfq8Wjm4BAVsEA" />
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-FX53JEVZZ8"></script>
@@ -44,7 +45,7 @@
 
           gtag('config', 'G-FX53JEVZZ8');
         </script>
-        
+
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -124,7 +125,7 @@
                     </div>
             </div>
         </section>
-        
+
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container"><div class="small text-center text-muted">Copyright © 2022 - NewBalance Energy</div></div>
