--- a/cover.html
+++ b/cover.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Fueling the energy transition. NewBalance was born to develop the global export of South American renewables via green hydrogen" />
-        <meta name="NewBalance Energy" content="" />
+        <meta name="author" content="NewBalance Energy" />
         <title>NewBalance Energy</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -32,6 +32,7 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
+        <meta name="google-site-verification" content="WfeWhA16ovyM__qq9SpH1N5ezhJa4Mfq8Wjm4BAVsEA" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
