--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Unlocking the global export of South American renewables via green hydrogen" />
-        <meta name="NewBalance Energy" content="" />
+        <meta name="author" content="NewBalance Energy" />
         <title>NewBalance Energy</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -34,6 +34,7 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
+        <meta name="google-site-verification" content="WfeWhA16ovyM__qq9SpH1N5ezhJa4Mfq8Wjm4BAVsEA" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -56,7 +57,7 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container h-100">  
+            <div class="container h-100">
                 <div class="row align-items-center">
                     <div class="col-lg-6 no-mobile">
                       <div id="anim-61c47741e8a05" class="wpbdmv-animation renderer-svg" style="max-width: 100%; width: 100%;">
