--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </div>
             </div>
         </section>
-        <!-- Call to action-->
+        <!-- Roadmap-->
         <section class="page-section bg-dark text-white map-section">
             <div class="container text-center">
                 <div class="row justify-content-center">
@@ -185,6 +185,19 @@
                 </div>
             </div>
         </section>
+
+        <!-- Blog CTA -->
+        <section class="page-section blog-section" id="blog">
+            <div class="container text-center">
+                <div class="row justify-content-center">
+                  <a class="blog-section-content" href="https://balanced-holdings.medium.com"><h2>Explore our blog, learn more about hydrogen development at scale.</h2>
+                    <hr class="divider light my-4">
+                    <p>Join us while we build a writing culture that helps us clarify our thinking and share our ideas.</p>
+                    </a>
+                </div>
+            </div>
+        </section>
+
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
