--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                           <span class="welcome welcome--dot">Welcome to NewBalance Energy</span>
                             <h1 class="text-white font-weight-bold">A platform for unlocking production and commercialization of green hydrogen at scale</h1>
                             <hr class="divider my-4"/>
-                            <p class="text-white-75 font-weight-regular mb-5">NewBalance Energy sources and supports competitive and reliable green hydrogen production <i>today</i> to supply its network of international off-takers <i>tomorrow</i>.</p>
+                            <p class="text-white-75 font-weight-regular mb-5">NewBalance Energy sources and supports competitive and reliable green hydrogen production <i>today</i> to supply a network of global off-takers <i>tomorrow</i>.</p>
                             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#platform">Learn More</a>
                         </div>
                 </div>
@@ -77,14 +77,15 @@
         <section class="page-section bg-secondary" id="platform">
             <div class="container">
                 <span class=" welcome-dark welcome--dot text-center mt-0">Our Platform</span>
-                <h2 class="text-center mt-0">Designed for Projects and Built for Off-takers.</h2>
+                <h2 class="text-center mt-0">Designed for Producers and Built for Off-takers.</h2>
                 <hr class="divider my-4" />
                 <div class="row">
                     <div class="col-lg-6 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-chart-bar text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Hydrogen Production</h3>
-                            <p class="text-muted mb-0"><b>We identify, invest capital, and off-take production from top green hydrogen projects.</b> Together, we’ll turn South America into one of the world's most reliable hydrogen regions.
+                            <p class="text-muted mb-0">We identify, invest, and provide early offtake commitments to the most competitive and reliable green hydrogen production projects.<b> We designed NewBalance Energy to accelerate a project's path to a financial decision.</b>
+
 </p>
                         </div>
                     </div>
@@ -92,7 +93,7 @@
                         <div class="mt-5">
                             <i class="fas fa-4x fa-handshake text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Off-Taker Market</h3>
-                            <p class="text-muted mb-0"><b>We partner with international organizations to develop long-term, low-risk, and predictable future hydrogen supply deals.</b> Together, we’ll evolve into hydrogen societies through predictable supply chains.
+                            <p class="text-muted mb-0">We generate a portfolio of competitive and reliable future supplies, to reduce the risks and investments off-takers face when engaging in projects early and directly.<b> We built NewBalance Energy to unlock leading transition plans.</b>
 </p>
                         </div>
                     </div>
@@ -121,7 +122,7 @@
                           <img src="assets/img/invest.jpg" class="card-img-top" alt="Tanker">
                           <div class="card-body">
                             <h5 class="card-title">Capital Investment</h5>
-                            <p class="card-text">We invest capital into our portfolio projects in support of its development through feasibility and Front End Engineering Design phases to ultimately achieve a successful and accelerated Financial Investment Decision.</p>
+                            <p class="card-text">We invest capital into a portfolio of production projects and support the development through feasibility and Front End Engineering Design phases to ultimately achieve a successful and accelerated Financial Investment Decision.</p>
                             <a href="invest.html" class="btn btn-primary">Learn More</a>
                           </div>
                         </div>
@@ -131,7 +132,7 @@
                           <img src="assets/img/tanker.jpg" class="card-img-top" alt="Tanker">
                           <div class="card-body">
                             <h5 class="card-title">Offtake Agreements</h5>
-                            <p class="card-text">NewBalance works with each project to develop an offtake proposal early in the project life cycle. NewBalance's HPQS governs the offtake proposal and works as a roadmap for automatically converting it into a purchase agreement.</p>
+                            <p class="card-text">NewBalance works with each project to develop an offtake proposal early in the project life cycle. NewBalance's HPQS governs the offtake proposal and serves as a roadmap for automatically triggering a purchase agreement.</p>
                             <a href="offtake.html" class="btn btn-primary">Learn More</a>
                           </div>
                         </div>
@@ -188,12 +189,12 @@
 
         <!-- Blog CTA -->
         <section class="page-section blog-section" id="blog">
-            <div class="container text-center">
-                <div class="row justify-content-center">
-                  <a class="blog-section-content" href="https://balanced-holdings.medium.com"><h2>Explore our blog, learn more about hydrogen development at scale.</h2>
+            <div class="container text-center ">
+                <div class="row justify-content-center blog-section-content">
+                  <h2>Explore our blog, learn more about hydrogen development at scale.</h2>
                     <hr class="divider light my-4">
                     <p>Join us while we build a writing culture that helps us clarify our thinking and share our ideas.</p>
-                    </a>
+                    <a class="btn btn-primary btn-xl blog-section-content" href="https://balanced-holdings.medium.com" target="_blank">Continue Reading</a>
                 </div>
             </div>
         </section>
