--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <meta name="google-site-verification" content="WfeWhA16ovyM__qq9SpH1N5ezhJa4Mfq8Wjm4BAVsEA" />
+        <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -226,6 +227,7 @@
                                 <label class="form-check-label" for="exampleCheck1">Keep me up to date with your latest news</label>
                               </div>
                               <input type="hidden" name="_gotcha"><!-- use this to prevent spam -->
+                              <div class="g-recaptcha" data-sitekey="6LeRIqgfAAAAAK1NCP-CthU8f4JzzqQBCobPP2Ys"></div>
                               <button type="submit" class="btn btn-primary" id="sendMessageButton" value="Submit">Submit</button>
                             </form>
                     </div>
