--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                   <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#approach">Our Approach</a></li>
                   <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#location">South America</a></li>
                   <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger nav-blog" target="_blank" href="https://balanced-holdings.medium.com">Blog</a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger nav-blog" target="_blank" href="https://balanced-holdings.medium.com">Blog
+                  <div data-bn-type="text" class="header-alert">New</div></a></li>
                 </ul>
               </div>
           </div>
@@ -208,7 +209,7 @@
                         <h2 class="mt-0">Contact Us</h2>
                         <hr class="divider my-4" />
                         <p class="text-muted">To learn more about our plans for your region, please fill out and submit the form below</p>
-                            <form action="https://formcarry.com/s/O89pPKfxh26" method="POST" accept-charset="UTF-8" name="sentMessage" id="form" novalidate="novalidate" class="ajaxForm">
+                            <form action="https://formcarry.com/s/O89pPKfxh26" method="POST" accept-charset="UTF-8" enctype="multipart/form-data" name="sentMessage" id="form" novalidate="novalidate" class="ajaxForm">
                               <div class="mb-3">
                                 <label for="name" class="form-label">First Name</label>
                                 <input type="text" name="firstName" class="form-control">
