fixed head style

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
         <meta name="theme-color" content="#ffffff">
         <meta name="google-site-verification" content="WfeWhA16ovyM__qq9SpH1N5ezhJa4Mfq8Wjm4BAVsEA" />
         <script src='https://www.google.com/recaptcha/api.js'></script>
+        <style type="text/css">
+          @media (max-width: 991.98px) {
+            .no-mobile {
+              display: none!important;
+            }
+          }
+        </style>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -62,7 +69,7 @@
             <div class="container h-100">
                 <div class="row align-items-center">
                     <div class="col-lg-6 no-mobile">
-                      <div id="anim-61c47741e8a05" class="wpbdmv-animation renderer-svg" style="max-width: 100%; width: 100%;">
+                      <div id="anim-61c47741e8a05" class="wpbdmv-animation enderer-svg" style="max-width: 100%; width: 100%;">
                             </div>
                         </div>
                         <div class="col-lg-6">
