--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
             }
           }
         </style>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-FX53JEVZZ8"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-FX53JEVZZ8');
+        </script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -93,7 +102,7 @@
                         <div class="mt-5">
                             <i class="fas fa-4x fa-chart-bar text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Hydrogen Production</h3>
-                            <p class="text-muted mb-0">We identify, invest, and provide early offtake commitments to the most competitive and reliable green hydrogen production projects.<b> We designed NewBalance Energy to accelerate a project's path to a financial decision.</b>
+                            <p class="text-muted mb-0">We identify, invest, and become early off-takers of the most competitive and reliable green hydrogen production projects.<b> We designed NewBalance Energy to accelerate a project's path to a financial decision.</b>
 
 </p>
                         </div>
@@ -130,8 +139,8 @@
                       <div class="card">
                           <img src="assets/img/invest.jpg" class="card-img-top" alt="Tanker">
                           <div class="card-body">
-                            <h5 class="card-title">Capital Investment</h5>
-                            <p class="card-text">We invest capital into a portfolio of production projects and support the development through feasibility and Front End Engineering Design phases to ultimately achieve a successful and accelerated Financial Investment Decision.</p>
+                            <h5 class="card-title">Capital Investments</h5>
+                            <p class="card-text">We invest capital in a portfolio of production projects and support their development through feasibility to FEED and implementation to ultimately achieve a successful and accelerated Financial Investment Decision.</p>
                             <a href="invest.html" class="btn btn-primary">Learn More</a>
                           </div>
                         </div>
