--- a/invest.html
+++ b/invest.html
@@ -35,6 +35,16 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <meta name="google-site-verification" content="WfeWhA16ovyM__qq9SpH1N5ezhJa4Mfq8Wjm4BAVsEA" />
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-FX53JEVZZ8"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-FX53JEVZZ8');
+        </script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
