--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                           <span class="welcome welcome--dot">Welcome to NewBalance Energy</span>
                             <h1 class="text-white font-weight-bold">A platform for unlocking production and commercialization of green hydrogen at scale</h1>
                             <hr class="divider my-4"/>
-                            <p class="text-white-75 font-weight-regular mb-5">NewBalance Energy sources and supports competitive and reliable green hydrogen production <i>today</i> to supply a network of global off-takers <i>tomorrow</i>.</p>
+                            <p class="text-white-75 font-weight-regular mb-5">We provide early off-take liquidity to the most promising production projects <i>today</i> to supply a network of global off-takers <i>tomorrow</i>.</p>
                             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#platform">Learn More</a>
                         </div>
                 </div>
@@ -111,7 +111,7 @@
                         <div class="mt-5">
                             <i class="fas fa-4x fa-handshake text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Off-Taker Market</h3>
-                            <p class="text-muted mb-0">We generate a portfolio of competitive and reliable future supplies, to reduce the risks and investments off-takers face when engaging in projects early and directly.<b> We built NewBalance Energy to unlock leading transition plans.</b>
+                            <p class="text-muted mb-0">We generate a portfolio of competitive and reliable future supplies, to reduce the risks and costs off-takers face when engaging projects early and directly.<b> We built NewBalance Energy to unlock leading transition plans.</b>
 </p>
                         </div>
                     </div>
