added section for off-takers

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
                   <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#platform">Platform</a></li>
                   <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#approach">Our Approach</a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#location">South America</a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#location">Production Region</a></li>
                   <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                   <li class="nav-item"><a class="nav-link js-scroll-trigger nav-blog" target="_blank" href="https://balanced-holdings.medium.com">Blog
                   <div data-bn-type="text" class="header-alert">New</div></a></li>
@@ -92,7 +92,7 @@
             </div>
         </header>
         <!-- Platform-->
-        <section class="page-section bg-secondary" id="platform">
+        <section class="page-section" id="platform">
             <div class="container">
                 <span class=" welcome-dark welcome--dot text-center mt-0">Our Platform</span>
                 <h2 class="text-center mt-0">Designed for Producers and Built for Off-takers.</h2>
@@ -118,8 +118,41 @@
                 </div>
             </div>
         </section>
+
+        <!-- For Off-Takers-->
+        <section class="page-section bg-secondary" id="offtakers">
+            <div class="container">
+                <span class=" welcome-dark welcome--dot text-center mt-0">Our Solution for Off-Takers</span>
+                <h2 class="text-center mt-0">Unique Exposure to the Most Competitive Hydrogen Regions.</h2>
+                <hr class="divider my-4" />
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-piggy-bank mb-4 offtake-features"></i>
+                            <h3 class="h4 mb-2">Save Costs</h3>
+                            <p class="text-muted mb-0">NewBalance Energy is in a leading position to map and assess entire value and supply chains through proprietary models and standards, <b>saving off-takers the capital involved in performing the due diligence themselves.</b></p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-umbrella mb-4 offtake-features"></i>
+                            <h3 class="h4 mb-2">Reduce Risks</h3>
+                            <p class="text-muted mb-0">Our portfolio approach allows access to hydrogen from a group of best-in-class projects, <b>reducing the supply and performance risks off-takers face when dealing directly and early with a project.</b></p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-align-center mb-4 offtake-features"></i>
+                            <h3 class="h4 mb-2">Aligned Incentives</h3>
+                            <p class="text-muted mb-0">The success of NewBalance Energy depends on its ability to identify, select, and partner with the most competitive and reliable green hydrogen projects it operates, <b>aligning its incentives with those of its end-off-take partners.</b></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Approach-->
-        <section class="page-section">
+        <section class="page-section" id="approach">
             <div class="container">
               <span class=" welcome-dark welcome--dot text-center mt-0" id="approach">Our Approach</span>
                 <h2 class="text-center mt-0">Empower Production. De-risk Supplies.</h2>
@@ -157,6 +190,7 @@
                     </div>
             </div>
         </section>
+
         <!-- South America-->
         <section class="page-section bg-secondary" id="southamerica">
             <div class="container">
@@ -188,16 +222,16 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Roadmap</h2>
                         <hr class="divider light my-4">
-                        <p class="text-white-50 mb-4">Investing Across Existing Projects To Meet Ambitious Goals by 2028</p>
+                        <p class="text-white-50 mb-4">Working With Existing Projects To Meet Ambitious Goals by 2028</p>
                         <div class="row justify-content-center">
                             <div class="col-lg-4 text-center numbers">
-                                <p><span>350,000</span><br>Tonnes/year</p>
+                                <p><span>1.5M</span><br>Tonnes per year</p>
                             </div>
                             <div class="col-lg-4 text-center numbers">
-                                <p><span>5GW</span><br>Electrolyzer capacity</p>
+                                <p><span>8GW</span><br>Electrolyzer capacity</p>
                             </div>
                             <div class="col-lg-4 text-center numbers">
-                                <p><span>USD1.8/kg</span><br>Projected LCOH (2030)</p>
+                                <p><span>USD2/kg</span><br>Projected LCOH (2030)</p>
                             </div>
                         </div>
                     </div>
