--- a/hpqs.html
+++ b/hpqs.html
@@ -68,16 +68,16 @@
         <!-- Platform-->
         <section class="page-section">
             <div class="container">
-                <span class=" welcome-dark welcome--dot text-center mt-0">Due Diligence Process</span>
-                <h2 class="text-center mt-0">Hydrogen Production Qualification Standards.</h2>
+                <span class=" welcome-dark welcome--dot text-center mt-0">Continuous Diligence Process</span>
+                <h2 class="text-center mt-0">Proprietary Risk Management Platform.</h2>
                 <h6 class="text-center mt-0">A system for streamlining the path from the initial feasibility studies to an offtake agreement.</h6>
                 <hr class="divider my-4" />
                 <div class="row row-article row-article-blue">
                     <div class="col-lg-6 col-md-6">
-                        <p>Together with our technical partners, we develop a set of region-specific due diligence processes and protocols defined as Hydrogen Production Qualification Standards (“HPQS”). </p>
-                        <p>This system measures the risk, competitiveness, and reliability of a green hydrogen production project based on the information produced and collected during, but not limited to, the feasibility and engineering design phases, business plans, consortia formation, infrastructure plans, and technological decisions.</p>
-                        <p>Through the HPQS, we have a multi-stage evaluation process that drives our partnerships with production projects transparently and predictably, from feasibility studies to an offtake agreement.</p>
-                        <p>Our mission is to support the best projects by providing future commercial certainties early in their lifecycle. The HPQS is our way of defining that future.</p>
+                      <p>Together with our technical partners, we develop region-specific risk-management algorithms and models to monitor and evaluate every module in a green hydrogen value chain.</p>
+                      <p>This system measures the risk, competitiveness, and reliability of a green hydrogen production project based on the information produced and collected during, but not limited to, the feasibility and engineering design phases, business plans, consortia formation, infrastructure plans, and technological decisions.</p>
+                      <p>Through this platform, we have a multi-stage evaluation process that drives our partnerships with production projects transparently and predictably, from feasibility studies to first-molecule.</p>
+                      <p>Our mission is to support the best projects by providing future commercial certainties early in their lifecycle. Our technology is our way of defining that future.</p>
                     </div>
                     <div class="col-lg-6 col-md-6 text-center col-article-img col-article-img-hpqs">
                     </div>
