--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                       <div class="card">
                           <img src="assets/img/hpqs.jpg" class="card-img-top" alt="Tanker">
                           <div class="card-body">
-                            <h5 class="card-title">Proprietary Due Diligence</h5>
-                            <p class="card-text">NewBalance and its partners develop a set of region-specific due diligence and production protocols defined as Hydrogen Production Qualification Standards (“HPQS”) to measure the competitiveness and reliability of production projects.</p>
+                            <h5 class="card-title">Proprietary Risk Management Platform</h5>
+                            <p class="card-text">NewBalance Energy and its partners develop a region-specific risk-management platform to measure the competitiveness and reliability of production projects.</p>
                             <a href="hpqs.html" class="btn btn-primary">Learn More</a>
                           </div>
                         </div>
